--- a/Surveyresult.html
+++ b/Surveyresult.html
@@ -20,7 +20,7 @@
 				prefer?
 			</h2>
 			<p>
-				<input type="radio" name="choice" value="A" />Added a bonus/extra
+				<input type="radio" name="choice" value="A" checked/>Added a bonus/extra
           credit question or questions to the final if a certain course response
           rate was achieved.
         </p>
