--- a/Signup.html
+++ b/Signup.html
@@ -1,6 +1,9 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
+    <script src="https://code.jquery.com/jquery-3.5.1.js"
+		integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous">
+	  </script>
   </head>
   <body>
     <div class="message">
@@ -17,7 +20,7 @@
             required
           />
         </p>
-        <p>Choose your user name</p>
+        <p>E-mail</p>
         <p>
           <input
             type="text"
@@ -55,5 +58,10 @@
         <p><input type="submit" value="Create Your Account" /></p>
       </form>
     </div>
+    <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-app.js"></script>
+	  <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-auth.js"></script>
+    <script src = "js/SignUp.js"></script>
   </body>
 </html>
